--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.09MB/s(Youtube:不良林), server: gz2.tinkhub.me, port: 443, type: vmess, uuid: fa76e450-e663-45ac-b134-9038c5b052dc, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz2.tinkhub.me}}
-  - {name: 🇸🇬 新加坡-957.2KB/s(Youtube:不良林), server: gz2.tinkhub.me, port: 443, type: vmess, uuid: df86f7c5-79ed-45b7-bc7d-c6759253abbd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz2.tinkhub.me}}
-  - {name: 🇫🇷 法国-1.35MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇸🇬 新加坡-393.9KB/s(Youtube:不良林), server: 8.214.33.158, port: 8088, type: ss, cipher: aes-256-gcm, password: songyu0504}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-324.4KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.92MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-409.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-358.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: cmgz18.zifaner.top, port: 21211, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇨🇳 中国-416.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-320.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-451.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-324.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
