--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇦 加拿大-409.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-358.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: cmgz18.zifaner.top, port: 21211, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
-  - {name: 🇨🇳 中国-416.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-320.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-451.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 167.88.63.82, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-691.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 未知国家-2.19MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-1.28MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 167.88.63.82, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-3.18MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-305.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-409.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
+      - 未知国家-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
